--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 80%;
+    justify-content: space-between;
     /* max-width: 1100px; */
     min-width: 800px;
     background: #ffffff;
@@ -58,6 +59,7 @@ body {
 .left-section h2 {
     font-size: 28px;
     font-weight: 600;
+    padding-top: 10px;
 }
 
 .left-section p {
@@ -82,6 +84,7 @@ body {
     display: block;
     font-weight: 600;
     color: #f5f6fa;
+ 
 }
 
 
@@ -190,7 +193,33 @@ h6{
     color: #00b9f1;
 }
 
+.cancel::before{
+    content: "yeyw";
+    background-color: red;
+    color: rgb(0, 187, 16);
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    
+}
 
+/* .remove {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    right: 10px;
+} */
 /* ----------- userChoice -------------- */
 .userChoice {
     margin-block: 50px 30px;
